# rivlib-rs

./: Cargo.toml  README.md  index.html  search-index.js
aho_corasick/: struct.MatchesOverlapping.html  struct.StreamMatches.html  struct.StreamMatchesOverlapping.html
data/: scan.rxp
examples/: print-inclinations.rs
regex/: struct.FindCaptures.html  struct.FindMatches.html  struct.RegexSplits.html  struct.RegexSplitsN.html  struct.SubCaptures.html  struct.SubCapturesNamed.html  struct.SubCapturesPos.html
rivlib/: fn.library_info.html  fn.library_version.html  index.html  sidebar-items.js  type.Result.html
rivlib/error/: enum.Error.html  index.html  sidebar-items.js
rivlib/stream/: enum.EchoType.html  index.html  sidebar-items.js  struct.Facet.html  struct.Point.html  struct.PointIterator.html  struct.Stream.html
rustc_serialize/json/: struct.Parser.html
scanifc/: Cargo.toml
scanifc-sys/: Cargo.toml  build.rs  wrapper.h
scanifc/data/: scan.rxp
scanifc/examples/: count-points.rs
scanifc/src/: lib.rs  macros.rs  point.rs  point3d.rs
scanlib/: Cargo.toml  build.rs
scanlib/src/: inclination.rs  lib.rs  pointcloud.cpp  scanlib.cpp  wrapper.rs
src/: error.rs  lib.rs  main.rs  point.rs  reader.rs  scanifc.rs  stream.rs
src/aho_corasick/: autiter.rs.html  full.rs.html  lib.rs.html
src/docopt/: dopt.rs.html  lib.rs.html
src/libc/: dox.rs.html  lib.rs.html  macros.rs.html
src/log/: lib.rs.html  macros.rs.html
src/memchr/: lib.rs.html
src/regex/: char.rs.html  input.rs.html  lib.rs.html  program.rs.html  re.rs.html
src/rivlib/: error.rs.html  (+3 more)
(+46 files in other folders)
